--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,visualstudiocode,node,react,reactnative,python,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,visualstudiocode,node,react,reactnative,python,go
 
+last/
+last\
+temp/
+temp\
+
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
