--- a/parser/Dockerfile.parser
+++ b/parser/Dockerfile.parser
@@ -1,1 +1,10 @@
-FROM baseImage
+FROM golang:1.20
+RUN mkdir /parser
+ADD ./parser/src /parser/
+WORKDIR /parser
+RUN go mod init knocker && go mod tidy && go build -o main .
+CMD ["/parser/main"]
+
+# FROM scratch
+# ADD ./parser/src /parser/
+# CMD ["/parser/main"]
