--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,16 @@
 server {
     listen 8080;
     server_name localhost;
-    location / {
-        proxy_pass http://timetable.mirea:8000/;
+    # location / {
+    #     proxy_pass http://timetable.mirea:8000/;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_cache off;
+    # }
+    location /api/timetable {
+        proxy_pass http://api.mirea:9888/api/timetable;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
