--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ last\
 temp/
 temp\
 
+postgresql\data\*
+postgresql/data/*
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
