--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,11 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: '0.4'
+          memory: '4g'
 
   nginx:
     build:
@@ -85,6 +90,11 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: '3g'
 
   telegram:
     hostname: telegram.mirea
