--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name localhost;
+    server_name 192.168.1.121;
     location / {
         proxy_pass http://timetable.mirea:3000/;
         proxy_set_header Host $host;
