--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,8 +9,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache off;
     }
-    location /api/timetable {
-        proxy_pass http://api.mirea:9888/api/timetable;
+    location /api/ {
+        proxy_pass http://api.mirea:9888/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
