--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 8080;
     server_name 192.168.1.121;
-    add_header 'Access-Control-Allow-Origin' 'http://mirea-site.club';
+    add_header 'Access-Control-Allow-Origin' 'http://mirea-club.site';
     location / {
         proxy_pass http://timetable.mirea:3000/;
         proxy_set_header Host $host;
