--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,6 @@
 server {
     listen 8080;
     server_name 192.168.1.121;
-    add_header 'Access-Control-Allow-Origin' 'http://mirea-club.site';
     location / {
         proxy_pass http://timetable.mirea:3000/;
         proxy_set_header Host $host;
@@ -11,6 +10,10 @@ server {
         proxy_cache off;
     }
     location /api/ {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Headers' 'Content-Type';
+        add_header 'Access-Control-Allow-Methods' 'GET,POST';
+
         proxy_pass http://api.mirea:9888/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
