--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     location /api/ {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Headers' 'Content-Type';
-        add_header 'Access-Control-Allow-Methods' 'GET,POST';
+        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS';
 
         proxy_pass http://api.mirea:9888/api/;
         proxy_set_header Host $host;
