--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,9 +2,9 @@ server {
     listen 8080;
     server_name 192.168.1.121;
     location /api/ {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Headers' 'Content-Type';
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS';
+        # add_header 'Access-Control-Allow-Origin' '*';
+        # add_header 'Access-Control-Allow-Headers' 'Content-Type';
+        # add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS';
 
         proxy_pass http://api.mirea:9888/api/;
         proxy_set_header Host $host;
